src/tests/testfiles/binary-operators/types-21.txt
Error at 2:5: Binary operator operands must have the same type (have int rvalue and float rvalue)
10 % 5.0;
^
